Ng: fixed file/dir icons too small sometimes

--- a/src/angular/src/app/pages/files/file.component.scss
+++ b/src/angular/src/app/pages/files/file.component.scss
@@ -45,7 +45,6 @@
     flex-direction: row;
 
     img {
-        width: 20px;
         height: 20px;
         margin-right: 8px;
         margin-top: 1px;
